- Added GIF options tab.
- Added Allow Lossy optimizations checkbox in JPEG tab.
- Reenabled Embarcadero's Luna, Metropolis and Windows 10 themes removed in FileOptimizer 9.10, because they work fine again with Windows 10 Anniversary and later.
- Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
- Fixed version display in About window.
- Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
- Updated pngquant to 2.10.1.
- Updated ImageMagick to 7.0.6.4 with HDRI support.
- Updated to cppcheck 1.80.


10.10 - 2017/07/28
- Increased NSIS installer dictionary size to 216MB thanks to 4gb_patch by NTCore and upgraded to latest NSIS nightly builds. Size reduced from 96MB to 70MB (maadjordan).
- Repacked portable version is now a 7-Zip EXE SFX instead of a ZIP file. Size reduced from 136MB to 66MB.
- Updated pingo to 0.89 x86 and x64 versions.
- Updated to ECT 0.8.2 (da09899) x86 and x64 daily optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick to 7.0.6.3 with HDRI support.

10.00 - 2017/07/21 (5th aniversary release)
- Added EnableCache=false INI setting to enable cache of already optimized files, so they are not reoptimized each time.
- Added AllowMultipleInstances=false INI setting, to prevent the warning of multiple FileOptimizer instances running (Jack).
- Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
- Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
- Improved GUI draw performance.
- Improved pingo lossy optimizations for JPEG and PNG.
- Improved gifsicle and gifsicle-lossy performance by allowing using more memory, and using several threads.
- Added nightly builds at the SVN repository, so they can be publicly tested (Jack, Ryan Morben).
- Updated gifsicle to 1.89 (custom build).
- Updated pngquant to 2.10.0.